# bjorn

./: .gitignore  Cargo.toml  README.md
benchmarks/: README.md
benchmarks/join/: README.md  benchmark.py  data_gen.py  slurm_submit_join.sbatch  validate_outputs.py
benchmarks/join_multistage/: README.md  benchmark.py  slurm_submit_join_multistage.sbatch  validate_outputs.py
benchmarks/wordcount/: README.md  benchmark.py  data_gen.py  slurm_submit_wordcount.sbatch  validate_outputs.py  validate_outputs_parquet.py  validate_outputs_text.py
concepts/fs_sort/: Cargo.toml
concepts/fs_sort/src/: main.rs
examples/join/: Cargo.toml
examples/join/src/: main.rs
examples/join_multistage/: Cargo.toml
examples/join_multistage/src/: main.rs
examples/wordcount/: Cargo.toml
examples/wordcount/src/: main.rs
examples/wordcount_parquet/: Cargo.toml
examples/wordcount_parquet/src/: main.rs
lib/: README.md
lib/bjorn/: Cargo.toml
lib/bjorn/src/: api.rs  constants.rs  io.rs  lib.rs  runtime.rs  slurm.rs  sort.rs  stats.rs  utils.rs  writer.rs
naive_examples/join/: Cargo.toml
naive_examples/join/src/: main.rs
naive_examples/join_multistage/: Cargo.toml
naive_examples/join_multistage/src/: main.rs
naive_examples/wordcount/: Cargo.toml
naive_examples/wordcount/src/: main.rs
naive_examples/wordcount_parquet/: Cargo.toml
naive_examples/wordcount_parquet/src/: main.rs
scripts/nemo_jsonl/: Cargo.toml  slurm_submit_nemo.sbatch
scripts/nemo_jsonl/src/: main.rs
