[package]
name = "bjorn-join-multistage-text"
version = "0.1.0"
edition = "2021"

[dependencies]
bjorn = { path = "../../lib/bjorn" }
anyhow = { workspace = true }
clap = { workspace = true }
regex = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { version = "1", features = ["v4", "serde"] }
serde = { workspace = true }
serde_json = { workspace = true }
