[package]
name = "naive-join-text"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
rayon = { workspace = true }
walkdir = { workspace = true }
clap = { workspace = true }
regex = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { version = "1", features = ["v4", "serde"] }
