[package]
name = "naive-wordcount"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
rayon = { workspace = true }
walkdir = { workspace = true }
regex = { workspace = true }
clap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
