[package]
name = "nemo-jsonl"
version = "0.1.0"
edition = "2021"

[dependencies]
bjorn = { path = "../../lib/bjorn" }
anyhow = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
rand = "0.8"
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
